Fix length number wrapping with small numbers

--- a/src/card/Card.scss
+++ b/src/card/Card.scss
@@ -133,7 +133,7 @@
     top: 48cqw;
     font-size: 5cqw;
     margin-left: 4cqw;
-    width: min-content;
+    width: 7.95cqw;
     text-align: center;
     padding-top: 0.35em;
     
